src/index.css
/* ... */
.riverspan:nth-child(2) {
    width: var(--riverSectionWidth);
    min-width: var(--riverSectionWidth);
    max-width: var(--riverSectionWidth);
}

.skillspan {
    width: var(--riverSkillWidth);
    min-width: var(--riverSkillWidth);
    max-width: var(--riverSkillWidth);
}

.statespan {
    display: none;
    width: var(--riverStateWidth);
    min-width: 30px;
    max-width: var(--riverStateWidth);
    text-align: left;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    padding-right: 4px;
    box-sizing: border-box;
}

@media screen and (min-width: 550px) {
    .statespan {
        display: inline-block;
    }
}

#topbar .riverspan:nth-child(2) {
    /* Make section slightly smaller so skill can move left without matching left edge */
    width: calc(var(--riverSectionWidth) - 1%);
    min-width: calc(var(--riverSectionWidth) - 1%);
    max-width: calc(var(--riverSectionWidth) - 1%);
}

#topbar .skillspan {
    /* Allow skill header more room to avoid overflowing class */
    width: calc(var(--riverSkillWidth) + 1%);
    min-width: calc(var(--riverSkillWidth) + 1%);
    max-width: calc(var(--riverSkillWidth) + 1%);
    margin-left: -1%;
    margin-right: 1%; 
}

.classspan {
    width: var(--riverClassWidth);
    min-width: var(--riverClassWidth);
    max-width: var(--riverClassWidth);
}

.flowspan {
    width: var(--riverFlowWidth);
    min-width: var(--riverFlowWidth);
    max-width: var(--riverFlowWidth);
    margin-left: 1%;
    font-family: BlinkMacSystemFont, "Noto Sans HK", Arial, Helvetica, sans-serif; /*Noto Sans HK contains the arrows that I want. On Apple Macs, use the system font.*/
}

@media screen and (min-width: 550px) {
	#topbar .skillspan {
		margin-left: -1%;
		margin-right: 1%;
	}
}

@media screen and (min-width: 800px) {
    #topbar .riverspan:nth-child(2) {
        width: var(--riverSectionWidth);
        min-width: var(--riverSectionWidth);
        max-width: var(--riverSectionWidth);
    }

    #topbar .skillspan {
        width: var(--riverSkillWidth);
        min-width: var(--riverSkillWidth);
        max-width: var(--riverSkillWidth);
        margin-left: 0;
        margin-right: 0;
    }
}

.favspan {
    margin-left: auto;
    padding-right: 2px;
    cursor: pointer;
    font-size: 1.2em;
    flex-shrink: 0;
}

@media screen and (min-width: 550px) {
    .favspan {
        padding-right: 8px;
    }
}

@media screen and (max-width:309px) {
    /*Smart watch mode.*/
    .flowspan {
        margin-left: 2%;
    }
    .riverbutton {
        flex-wrap: wrap;
    }
    h1 {
        font-size: 18vw; /*Prevent the River Information text from going off the screen and making the device zoom out.*/
    }

	/*Stop disastorous overflow in the topbar.*/
	#topbar > .classspan {
		/*Make "Class" use up only the space it needs.*/
		width: auto !important;
		min-width: none !important;
		max-width: none !important;
	}
	#topbar > .skillspan {
		/*Let "Skill" use up however much space it needs*/
		width: auto !important;
		min-width: none !important;
		max-width: none !important;
	}
}
/*End of riverspan style*/

/* SEO & Accessibility Utilities */
.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}


/*tooltips. Used to explain skill levels.*/
.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted;
}

.tooltip .tooltiptext {
  visibility: hidden;
  white-space: nowrap;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 4px;
  position: absolute;
  z-index: 3;
  top: -5px;
  left: 155%;
}

.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  top: 50%;
  right: 100%;
  margin-top: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent black transparent transparent;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.tooltip-bottom .tooltiptext {
  top: 120%;
  left: 50%;
  transform: translateX(-50%);
}

.tooltip-bottom .tooltiptext::after {
  top: auto;
  bottom: 100%;
  left: 50%;
  right: auto;
  margin-top: 0;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent black transparent;
}





/*riverbutton is the element that holds all the riverspans*/
.riverbutton {
    width:100%;
    border:0;
    margin:0;
    transition: 0.2s;
    text-align:left;
	display:flex;
	align-items:center;
}

.riverbutton:nth-child(even) {
    background-color: #f4f4f4;
}
.riverbutton:nth-child(odd) {
    background-color: #f7f7f7;
}
.riverbutton:hover {
	filter: saturate(1.5) brightness(0.9);
}

.riverbuttonDam {
	background-image: repeating-linear-gradient(150deg,transparent, transparent, rgba(0,0,0,.1),transparent, transparent, transparent 16%);
}


.riverbuttonGauge:nth-child(even) {
	background-color: #f0bdf9 !important;
}
.riverbuttonGauge:nth-child(odd) {
	background-color: #f5bdff !important;
}

.riverbutton:focus {
    outline:0;
}


/*Controlling font size smoothly based on screen size*/
.riverbutton {
    font-size: var(--defaultFontSize);
	min-height: 32px; /*Make buttons easier to click on mobile, and more uniformly sized.*/
}

@media screen and (max-width: 370px) {
    .riverbutton {
		padding-left: 4px; /*Leave a little more space for other stuff than the standard 8px.*/
		padding-right: 0; /*Give a bit more space. Rarely was this padding noticed at all.*/
    }
}

@media screen and (max-width: 499px) {
    #topbar > .skillspan {
        /*Let "Skill" use up however much space it needs*/
        width: auto !important;
        min-width: none !important;
        max-width: none !important;
    }
}
/* ... */

